// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render facets for developer 1`] = `
Array [
  "FacetMode",
  "TypeFacet",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "CreationDateFacet",
  "LanguageFacet",
  "RuleFacet",
  "TagFacet",
  "ProjectFacet",
  "ModuleFacet",
  "DirectoryFacet",
  "FileFacet",
  "AssigneeFacet",
]
`;

exports[`should render facets for directory 1`] = `
Array [
  "FacetMode",
  "TypeFacet",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "CreationDateFacet",
  "LanguageFacet",
  "RuleFacet",
  "TagFacet",
  "FileFacet",
  "AssigneeFacet",
  "AuthorFacet",
]
`;

exports[`should render facets for global page 1`] = `
Array [
  "FacetMode",
  "TypeFacet",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "CreationDateFacet",
  "LanguageFacet",
  "RuleFacet",
  "TagFacet",
  "ProjectFacet",
  "AssigneeFacet",
  "AuthorFacet",
]
`;

exports[`should render facets for module 1`] = `
Array [
  "FacetMode",
  "TypeFacet",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "CreationDateFacet",
  "LanguageFacet",
  "RuleFacet",
  "TagFacet",
  "ModuleFacet",
  "DirectoryFacet",
  "FileFacet",
  "AssigneeFacet",
  "AuthorFacet",
]
`;

exports[`should render facets for project 1`] = `
Array [
  "FacetMode",
  "TypeFacet",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "CreationDateFacet",
  "LanguageFacet",
  "RuleFacet",
  "TagFacet",
  "ModuleFacet",
  "DirectoryFacet",
  "FileFacet",
  "AssigneeFacet",
  "AuthorFacet",
]
`;

exports[`should render facets when my issues are selected 1`] = `
Array [
  "FacetMode",
  "TypeFacet",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "CreationDateFacet",
  "LanguageFacet",
  "RuleFacet",
  "TagFacet",
  "ProjectFacet",
  "AuthorFacet",
]
`;
